# MaskDIno-ObjectDetection

./: README.md
configs/: config_maskdino_R50_hid1024.yaml  config_maskdino_swinL.yaml
docker/: Dockerfile  build.yml  docker-compose.yml  nvidia_entrypoint.sh
maskdino_ros_pkg/: package.xml  setup.cfg  setup.py
maskdino_ros_pkg/launch/: mask_dino_ros_launch.py
maskdino_ros_pkg/maskdino_ros_pkg/: maskdino_ros_g.py  maskdino_ros_g_n.py
maskdino_ros_pkg/maskdino_ros_pkg/maskdino/: 11_obj_train_swinL.py  config_swinL.yaml
maskdino_ros_pkg/maskdino_ros_pkg/maskdino/MaskDINO/: detect.py  inference.py
maskdino_ros_pkg/maskdino_ros_pkg/maskdino/MaskDINO/inference_utils/: utils.py
maskdino_ros_pkg/maskdino_ros_pkg/utils/: transformer.py  utils.py
maskdino_ros_pkg/params_g/: params.yaml
