<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maskdino_ros_pkg</name>
  <version>0.0.0</version>
  <description>get detections from maskdino</description>
  <maintainer email="ns-235861@hs-weingarten.de">root</maintainer>
  <license>Apache-2.0</license>


  <depend>vision_msgs</depend>
  <depend>cv_bridge </depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
